<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6E6AF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/calculadora_imc"
        android:textColor="@color/verde_destaque"
        android:textSize="16dp"/>

    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Texto_imc"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#1E1E1F"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="Nome"
        android:inputType="text"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/peso"
        android:inputType="numberDecimal"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/tabela_imc"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_resultadoimc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="32sp"
        android:text="0.0"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/text_classificacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/observa_es"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/calcular_imcUP"
        android:textStyle="bold"
        android:textColor="@color/verdesaude"
        android:backgroundTint="@color/verde_destaque"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/button_get_historico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/verde_destaque"
        android:text="@string/historico"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_historico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp" />

    <ImageView
        android:layout_width="106dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_saude" />

</LinearLayout>
